Migration to maven-publish